Clean up devoptab examples: - update video init to match ftpii - remove wiiuse - don't link with unnecessary libs

--- a/nandimg/trunk/nandimg_example/Makefile
+++ b/nandimg/trunk/nandimg_example/Makefile
@@ -33,7 +33,7 @@ LDFLAGS	=	-g $(MACHDEP) -mrvl -Wl,-Map,$(notdir $@).map
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project
 #---------------------------------------------------------------------------------
-LIBS	:=	-lnandimg -lwiiuse -lbte -logc -lm
+LIBS	:=	-lnandimg -logc
 
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
