--- a/isfs/trunk/Makefile
+++ b/isfs/trunk/Makefile
@@ -133,8 +133,7 @@ $(OUTPUT).a: $(OFILES)
 #---------------------------------------------------------------------------------
 %.bin.o	:	%.bin
 #---------------------------------------------------------------------------------
-	@echo $(notdir $<)
-	$(bin2o)
+	@$(bin2o)
 
 
 
